# project1_pahmutov_dmitry_M25_555

./: .gitignore  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
