[project]
name = "project1_pahmutov_dmitry_M25_555"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "labyrinth_game" }]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[dependency-groups]
dev = [
    "ruff (>=0.14.4,<0.15.0)"
]
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
